--- a/gsweb.make.in
+++ b/gsweb.make.in
@@ -29,10 +29,11 @@ GSWEB_MINOR_VERSION = @MINOR_VERSION@
 GSWEB_SUBMINOR_VERSION = @SUBMINOR_VERSION@
 
 ifeq ($(GSW_NAMES),wo)
-     GSWEXT = _wo
+  AUXILIARY_GSW_LIBS += -lWebObjects -lWOExtensions -lWOExtensionsGSW
+else
+  AUXILIARY_GSW_LIBS += -lGSWeb -lGSWExtensions -lGSWExtensionsGSW
 endif
 
-AUXILIARY_GSW_LIBS += -lGSWeb$(GSWEXT) -lGSWExtensions$(GSWEXT) -lGSWExtensionsGSW$(GSWEXT)
 
 AUXILIARY_INCLUDE_DIRS += @AUX_INCS@
 AUXILIARY_TOOL_LIBS += @AUX_LIBS@ -lGSANTLR
