--- a/GSWExtensionsGSW.framework/Makefile.postamble
+++ b/GSWExtensionsGSW.framework/Makefile.postamble
@@ -1,5 +1,5 @@
-#
-#  Makefile.postamble
+#   -*-makefile-*-
+#   Makefile.postamble
 #
 #   Copyright (C) 1999 Free Software Foundation, Inc.
 #   
@@ -33,7 +33,9 @@
 #
 
 # Things to do before compiling
-# before-all::
+ifneq ($(gswnames),gsw)
+before-all:: $(WOExtensionsGSW_COMPONENTS)
+endif
 
 # Things to do after compiling
 # after-all::
@@ -66,7 +68,9 @@ gsdocs:
 # before-clean::
 
 # Things to do after cleaning
-# after-clean::
+ifneq ($(gswnames),gsw)
+after-clean:: WO-components-clean
+endif
 
 # Things to do before distcleaning
 # before-distclean::
@@ -80,3 +84,47 @@ gsdocs:
 # Things to do after checking
 # after-check::
 
+# Currently this script is rather aggresive as it doesn't identify
+# whole words but merely patterns.
+GSWWOReplaceScript.sed: ../GSWeb.framework/GSWWOCompatibility.h
+	$(ECHO_NOTHING) \
+	grep "^#define[[:space:]]*GSW.*[[:space:]]*WO.*" \
+	    ../GSWeb.framework/GSWWOCompatibility.h | \
+	  sed -e 's/#define /s\//' \
+	      -e 's/[[:space:]*]/\//' \
+	      -e 's/[[:space:]*]//g' \
+	      -e 's/$$/\//' > $@ ; \
+	echo "s/GSWExtensionsGSW/WOExtensionsGSW/g" >> $@ ; \
+	$(END_ECHO)
+
+# The script is copied instead of referenced as the relative path
+# from the $@ directory is unknown.  Keep this rule in sync with
+# GSWExtensions.framework/Makefile.postamble
+$(WOExtensionsGSW_COMPONENTS): GSWWOReplaceScript.sed
+	$(ECHO_NOTHING)cp -r $(subst .wo,.gswc,$(subst WO,GSW, $@)) $@ && \
+	cp GSWWOReplaceScript.sed $@ && \
+	cd $@ && ( \
+	  for I in *.gswd __done ; do \
+	    if [ $$I != __done ] ; then \
+	      sed -f GSWWOReplaceScript.sed $$I > \
+	        `echo $$I | sed "s/gswd$$/wod/"` \
+	        && rm -f $$I ; \
+	    fi ; \
+	  done ; \
+	  rm -rf CVS GSWWOReplaceScript.sed ; \
+	  for I in *.gswi __done ; do \
+	    if [ $$I != __done ] ; then \
+	      mv $$I `echo $$I | sed "s/gswi$$/woo/"` ; \
+	    fi ; \
+	  done ; \
+	  for I in GSW* __done ; do \
+	    if [ $$I != __done ] ; then \
+	      mv $$I `echo $$I | sed "s/^GSW/WO/"` ; \
+	    fi ; \
+	  done ) ;$(END_ECHO)
+
+WO-components-clean:
+	$(ECHO_NOTHING) \
+	rm -rf $(WOExtensionsGSW_COMPONENTS) ; \
+	rm -f GSWWOReplaceScript.sed ; \
+	$(END_ECHO)
