* GSWeb.framework/GSWUtils.h/m 	(IsStyle,IsNumberStyle, ExceptionRaise, ExceptionRaise0, 	ValidationExceptionRaise, ValidationExceptionRaise0, 	ExceptionByAddingUserInfoObjectFrameInfo, 	ExceptionByAddingUserInfoObjectFrameInfo0, 	ExceptionByAddingUserInfoFunctionFrameInfo, 	ExceptionByAddingUserInfoFunctionFrameInfo0, ): Reformat 	defines. 	(GSW_LOCK_LIMIT): New define. 	(ExceptionRaiseFn, ExceptionRaiseFn0, 	ValidationExceptionRaiseFn, 	ValidationExceptionRaiseFn0): Reformat declaration. 	(TmpLock, TmpTryLockBeforeDate, TmpLockBeforeDate, TmpUnlock): 	Remove. 	([NSLock isLocked]): Remove. 	([NSLock tmplock]): Ditto. 	([NSLock tmplockFromFunction:file:line:]): Ditto. 	([NSLock tmptryLock]): Ditto. 	([NSLock tmptryLockFromFunction:file:line:]): Ditto. 	([NSLock tmptryLockBeforeDate:]): Ditto. 	([NSLock tmptryLockBeforeDate:fromFunction:file:line:]): 	Ditto. 	([NSLock tmpunlock]): Ditto. 	([NSLock tmpunlockFromFunction:file:line:]): Ditto. 	([NSLock description]): Ditto. 	([NSRecursiveLock isLocked]): Ditto. 	([NSRecursiveLock tmplock]): Ditto. 	([NSRecursiveLock tmplockFromFunction:file:line:]): Ditto. 	([NSRecursiveLock tmptryLock]): Ditto. 	([NSRecursiveLock tmptryLockFromFunction:file:line:]): Ditto. 	([NSRecursiveLock tmptryLockBeforeDate:]): Ditto. 	([NSRecursiveLock 	tmptryLockBeforeDate:fromFunction:file:line:]): 	Ditto. 	([NSRecursiveLock tmpunlock]): Ditto. 	([NSRecursiveLock tmpunlockFromFunction:file:line:]): Ditto. 	(NSLockException, MessageForMutexLockError) 	(LoggedLock, LoggedLockBeforeDate, LoggedTryLock, 	LoggedTryLockBeforeDate, LoggedUnlock): New macros. 	(loggedLockBeforeDateFromFunctionInFileInLine, 	loggedUnlockFromFunctionInFileInLine): New logging lock 	functions. 	([NSThread description]): New Category. 	(volatileInternalDescription): New static function. 	(GSW_LOCK_LIMIT): New marco. 	* GSWeb.framework/GSWApplication.m 	([GSWApplication isRequestHandlingLocked]): Test lock instead 	of relying on obsolete lock categories. 	([GSWApplication l

--- a/Makefile.postamble
+++ b/Makefile.postamble
@@ -80,6 +80,7 @@ after-uninstall::
 after-distclean::
 	rm -rf config.cache config.log config.status
 	rm -rf config.h config.mak gsweb.make
+	rm -rf autom4te.cache
 
 gsweb.make: gsweb.make.in
 	./configure
