* GSWeb.framework/GSWApplication.h         * GSWeb.framework/GSWDeployedBundle.h: Replace objc_thread_t         with NSThread * for caching the thread in the instance variable.
        * GSWeb.framework/Makefile.postamble: Remove config.h during
        make distclean.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18666 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/Makefile.postamble
+++ b/GSWeb.framework/Makefile.postamble
@@ -72,7 +72,7 @@ after-install:: install-WO-headers
 
 # Things to do after distcleaning
 after-distclean::
-	rm -rf Makefile.preamble
+	rm -f Makefile.preamble $(GNUSTEP_TARGET_DIR)/config.h
 
 # Things to do before checking
 # before-check::
