* GSWExtensions.framework/GSWLongResponsePage.m         ([GSWLongResponsePage threadExited:]): Replace NSThreadExiting         with NSThreadWillExitNotification.         ([GSWLongResponsePage _perform:]): Ditto.
        * GSWeb.framework/GNUmakefile: Depend on GDL2 when applicable.
        * GSWeb.framework/Makefile.preamble.in: Add dependency on
        GSANTLER and -baseadd when applicable.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18698 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/GNUmakefile
+++ b/GSWeb.framework/GNUmakefile
@@ -28,6 +28,9 @@ GNUSTEP_MAKEFILES = $(GNUSTEP_SYSTEM_ROOT)/Makefiles
 
 GNUSTEP_LOCAL_ADDITIONAL_MAKEFILES=../gsweb.make
 include $(GNUSTEP_MAKEFILES)/common.make
+ifeq ($(GDL2),yes)
+include $(GNUSTEP_MAKEFILES)/Auxiliary/gdl2.make
+endif
 
 include ../Version
 include ../config.mak
