Also add dependancy on GDL2.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18699 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/Makefile.preamble.in
+++ b/GSWeb.framework/Makefile.preamble.in
@@ -68,6 +68,9 @@ LIBRARIES_DEPEND_UPON += -lGSANTLR @AUX_LIBS@
 ifneq ($(FOUNDATION_LIB),gnu)
 LIBRARIES_DEPEND_UPON += -lgnustep-baseadd
 endif
+ifeq ($(GDL2),yes)
+LIBRARIES_DEPEND_UPON += -lgnustep-db2control -lgnustep-db2
+endif
 
 # Additional library directories the linker should search
 ADDITIONAL_LIB_DIRS = 
