* GSWeb.framework/GNUmakefile: Make WO_HEADER_FILES real         public headers.         * GSWExtensions.framework/GNUmakefile: Ditto.         * GSWeb.framework/Makefile.postamble: Simplify rules for         installing WO_HEADER_FILES.         * GSWExtensions.framework/Makefile.postamble: Ditto.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18825 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/GNUmakefile
+++ b/GSWExtensions.framework/GNUmakefile
@@ -182,13 +182,15 @@ GSWKeyValueConditional.h \
 #GSWSimpleArrayDisplay.h
 #GSWSimpleArrayDisplay2.h
 #GSWBatchNavigationBar.h
-WOExtensions_HEADER_FILES = $(GSWExtensions_HEADER_FILES)
 
 WO_HEADER_FILES = \
 	WOLongResponsePage.h \
 	WORedirect.h
 
 # WOExtensions.h not needed as it gets copied explicitly
+
+WOExtensions_HEADER_FILES = $(GSWExtensions_HEADER_FILES) \
+				WOExtensions.h $(WO_HEADER_FILES)
 
 GSWExtensions_HEADER_FILES_DIR = $(HEADER_DIR)
 WOExtensions_HEADER_FILES_DIR = $(HEADER_DIR)
