--- a/GSWExtensions.framework/Makefile.postamble
+++ b/GSWExtensions.framework/Makefile.postamble
@@ -130,6 +130,6 @@ WO-components-clean:
 	rm -rf $(WO_LOCALIZED_COMPONENTS) ; \
 	rm -f GSWWOReplaceScript.sed ;$(END_ECHO)
 
-$(WO_HEADER_FILES): WOExtenstions.h
-	$(ECHO_NOTHING)$(LN_S) WOExtenstions.h $@;$(END_ECHO)
+$(WO_HEADER_FILES): WOExtensions.h
+	$(ECHO_NOTHING)$(LN_S) WOExtensions.h $@;$(END_ECHO)
 
