* gsweb.make.in: Remove GSANTLR dependency.         * GSWExtensions.framework/Makefile.preamble: Ditto.         * GSWExtensionsGSW.framework/Makefile.preamble: Ditto.
        * GSWeb.framework/Makefile.preamble.in: Move AUX_LIBS to the
        bottom so that the linker on Darwin can deal with the static
        library.

        * GSWExtensions.framework/GSWKeyValueConditional.h: Remove
        include currently redundant for the include mechanism and
        causing warnings to gswnames=wo.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19106 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/Makefile.preamble
+++ b/GSWExtensions.framework/Makefile.preamble
@@ -69,7 +69,7 @@ ADDITIONAL_LDFLAGS =
 # These variables should only be needed on windows
 # but they aren't set yet.
 
-LIBRARIES_DEPEND_UPON += -lGSANTLR
+LIBRARIES_DEPEND_UPON +=
 
 ifneq ($(FOUNDATION_LIB),gnu)
 LIBRARIES_DEPEND_UPON += -lgnustep-baseadd
