--- a/GSWExtensionsGSW.framework/Makefile.preamble
+++ b/GSWExtensionsGSW.framework/Makefile.preamble
@@ -83,7 +83,7 @@ WOExtensionsGSW_LIB_DIRS = \
 	-L$(WO_LIBRARY_BASE)/$(GSW_FRAMEWORK_SUFFIX)
 endif
 
-LIBRARIES_DEPEND_UPON += -lGSANTLR
+LIBRARIES_DEPEND_UPON +=
 
 ifneq ($(FOUNDATION_LIB),gnu)
 LIBRARIES_DEPEND_UPON += -lgnustep-baseadd
