--- a/gsweb.make.in
+++ b/gsweb.make.in
@@ -36,7 +36,7 @@ endif
 
 
 AUXILIARY_INCLUDE_DIRS += @AUX_INCS@
-AUXILIARY_TOOL_LIBS += @AUX_LIBS@ -lGSANTLR
+AUXILIARY_TOOL_LIBS += @AUX_LIBS@
 
 GDL2=@GDL2@
 ifeq ($(GDL2),yes)
