* GSWeb.framework/GNUmakefile: Make GSWDefines.h a public 	header.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19345 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/GNUmakefile
+++ b/GSWeb.framework/GNUmakefile
@@ -315,6 +315,7 @@ GSWStaticResourceRequestHandler.h \
 GSWRecording.h \
 GSWInputStreamData.h \
 GSWActionURL.h \
+GSWDefines.h \
 
 #For next Version:
 #GSWAdminAction.h \
