* GSWeb.framework/GNUmakefile: Add GSWApplication+Defaults.m.         * GSWeb.framework/GSWApplication.m:         (globalAppDefaultOptions, WOStrictFlag)         (GSWeb_ApplicationDebugSetChange,         * GSWApplicationSetDebugSetOption)         (GSWeb_AdjustVolatileNSArgumentDomain)         (GSWeb_InitializeGlobalAppDefaultOptions)         (GSWeb_InitializeDebugOptions)         (GSWeb_DestroyGlobalAppDefaultOptions)         ((GSWApplicationDefaults), (UserDefaults)): Move from here to...         * GSWeb.framework/GSWApplication+Defaults.m: ... here.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@19931 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/GNUmakefile
+++ b/GSWeb.framework/GNUmakefile
@@ -102,6 +102,7 @@ GSWBundle.m \
 NSString+Trimming.m \
 NSString+HTML.m \
 GSWApplication.m \
+GSWApplication+Defaults.m \
 GSWAssociation.m \
 GSWComponent.m \
 GSWContext.m \
