Replaced GSWElementIDString by GSWElementID, minor optimizations and code cleaning.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@20454 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/GNUmakefile
+++ b/GSWeb.framework/GNUmakefile
@@ -171,7 +171,7 @@ GSWHTMLStaticGroup.m \
 GSWInput.m \
 GSWConstantValueAssociation.m \
 GSWComponentReference.m \
-GSWElementIDString.m \
+GSWElementID.m \
 GSWHTMLDynamicElement.m \
 GSWDynamicURLString.m \
 GSWBindingNameAssociation.m \
@@ -239,7 +239,7 @@ GSWDisplayGroup.h \
 GSWDynamicElement.h \
 GSWDynamicURLString.h \
 GSWElement.h \
-GSWElementIDString.h \
+GSWElementID.h \
 GSWEmbeddedObject.h \
 GSWForm.h \
 GSWFrame.h \
