--- a/GSWeb.framework/Makefile.preamble.in
+++ b/GSWeb.framework/Makefile.preamble.in
@@ -56,6 +56,10 @@ ifeq ($(GSWDEBUG_DEEP), yes)
 	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DGSWDEBUG_DEEP
 endif
 
+ifeq ($(GSWDEBUG_ELEMENTSIDS), yes)
+	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DGSWDEBUG_ELEMENTSIDS
+endif
+
 # Additional flags to pass to the C compiler
 #new
 ADDITIONAL_CFLAGS =  -DUSE_BUILTIN
