--- a/GSWExtensionsGSW.framework/Makefile.preamble
+++ b/GSWExtensionsGSW.framework/Makefile.preamble
@@ -43,6 +43,10 @@ else
 	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DUSE_BUILTIN
 endif
 
+ifeq ($(GSWDEBUG), yes)
+	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DGSWDEBUG
+endif
+
 ifeq ($(GSWDEBUG_MEM), yes)
 	ADDITIONAL_OBJCFLAGS := $(ADDITIONAL_OBJCFLAGS) -DGSWDEBUG_MEM
 endif
