removed ZLIB default
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@21910 72102866-910b-0410-8b05-ffd578937521

--- a/config.h.in
+++ b/config.h.in
@@ -27,7 +27,9 @@
 
 #undef HAVE_LIBWRAP
 #undef HAVE_GDL2
-#define HAVE_ZLIB 1
+// enable that to get zlib bugs in gsw
+//#define HAVE_ZLIB 1
+#undef HAVE_ZLIB
 
 #define RCS_ID(name) \
         static const char rcsId[] = name; \
