--- a/config.h.in
+++ b/config.h.in
@@ -27,9 +27,7 @@
 
 #undef HAVE_LIBWRAP
 #undef HAVE_GDL2
-// enable that to get zlib bugs in gsw
-//#define HAVE_ZLIB 1
-#undef HAVE_ZLIB
+#define HAVE_ZLIB 1
 
 #define RCS_ID(name) \
         static const char rcsId[] = name; \
