added GSWPageRestorationErrorPage.m to makefile
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/branches/06-02-dwetzel@22605 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/GNUmakefile
+++ b/GSWExtensions.framework/GNUmakefile
@@ -145,6 +145,7 @@ GSWStatsPage.m \
 GSWCollapsibleComponentContent.m \
 GSWSessionCreationErrorPage.m \
 GSWSessionRestorationErrorPage.m \
+GSWPageRestorationErrorPage.m \
 GSWExceptionPage.m \
 GSWDictionaryRepetition.m \
 GSWRedirect.m \
