Use GNUSTEP_INSTALLATION_DOMAIN and DESTDIR
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@24097 72102866-910b-0410-8b05-ffd578937521

--- a/Makefile.postamble
+++ b/Makefile.postamble
@@ -46,15 +46,15 @@ gsdocs:
 # The following rule is important mainly for packaging, because in that case 
 # you install into a fake system tree, and the directory is not there.
 #
-$(INSTALL_ROOT_DIR)$(GNUSTEP_MAKEFILES)/Auxiliary:
+$(DESTDIR)$(GNUSTEP_MAKEFILES)/Auxiliary:
 	$(MKINSTALLDIRS) $@
 
 # Things to do before installing
-before-install:: $(INSTALL_ROOT_DIR)$(GNUSTEP_MAKEFILES)/Auxiliary
+before-install:: $(DESTDIR)$(GNUSTEP_MAKEFILES)/Auxiliary
 	$(INSTALL_DATA) gsweb.make \
-	   $(INSTALL_ROOT_DIR)$(GNUSTEP_MAKEFILES)/Auxiliary/gsweb.make
+	   $(DESTDIR)$(GNUSTEP_MAKEFILES)/Auxiliary/gsweb.make
 	$(INSTALL_DATA) gsweb_wo.make \
-	   $(INSTALL_ROOT_DIR)$(GNUSTEP_MAKEFILES)/Auxiliary/gsweb_wo.make
+	   $(DESTDIR)$(GNUSTEP_MAKEFILES)/Auxiliary/gsweb_wo.make
 
 # Things to do after installing
 #after-install::
@@ -64,8 +64,8 @@ before-install:: $(INSTALL_ROOT_DIR)$(GNUSTEP_MAKEFILES)/Auxiliary
 
 # Things to do after uninstalling
 after-uninstall::
-	rm -f $(INSTALL_ROOT_DIR)$(GNUSTEP_MAKEFILES)/Auxiliary/gsweb.make
-	rm -f $(INSTALL_ROOT_DIR)$(GNUSTEP_MAKEFILES)/Auxiliary/gsweb_wo.make
+	rm -f $(DESTDIR)$(GNUSTEP_MAKEFILES)/Auxiliary/gsweb.make
+	rm -f $(DESTDIR)$(GNUSTEP_MAKEFILES)/Auxiliary/gsweb_wo.make
 
 # Things to do before cleaning
 # before-clean::
