Uncommented some lines that I unwillingly commented out in doing the last change
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@24142 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/GNUmakefile
+++ b/GSWeb.framework/GNUmakefile
@@ -44,10 +44,11 @@ FRAMEWORK_NAME = GSWeb WebObjects
 endif
 
 # Ensure that each framework uses its own GNUSTEP_OBJ_DIR_NAME & DERIVED_SRC
-#ifneq ($(GNUSTEP_INSTANCE),)
-#GNUSTEP_OBJ_DIR_NAME := $(GNUSTEP_OBJ_DIR_NAME)/$(GNUSTEP_INSTANCE)
-#DERIVED_SRC := $(DERIVED_SRC)/$(GNUSTEP_INSTANCE)
-#endif
+# Hmmm.
+ifneq ($(GNUSTEP_INSTANCE),)
+GNUSTEP_OBJ_DIR_NAME := $(GNUSTEP_OBJ_DIR_NAME)/$(GNUSTEP_INSTANCE)
+DERIVED_SRC := $(DERIVED_SRC)/$(GNUSTEP_INSTANCE)
+endif
 
 WebObjects_CPPFLAGS = -DGSWEB_WONAMES
 
