Updated configure for gnustep-make v2, plus added handy auto-config rule to makefile
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@24625 72102866-910b-0410-8b05-ffd578937521

--- a/Makefile.postamble
+++ b/Makefile.postamble
@@ -85,6 +85,9 @@ after-distclean::
 gsweb.make: gsweb.make.in
 	./configure
 
+config.mak: config.mak.in
+	./configure
+
 # Things to do before checking
 # before-check::
 
